tests/examples/help.err
Parse Error in line 5, column 5 of "help.af"
|   help = ``,
|       ^
Error: 'help' keyword cannot be used as a variable

1 Parse Error encountered


line 4, column 22 of "help.af" Eval Error: Binary operator + not implemented between null and null
1 Eval Error encountered
