tests/examples/help.af
# Test help messages

# Erroneous cases
help (null + null) = ``,
help = ``,

# Help messages of methods
help [1, 2].len = ``,
help 3.gcd = ``,
help ([1] + ["a"]).map = ``,

# Help messages of objects
help (1.2 + 2.3) = ``,
help [] = ``,

# Help messages of attributes of maps
m: {a: 2, b: true, c: null},
help m.c = ``,

# Help messages for libraries
help num.sqrt = ``,
help map = ``,

# Test manipulation of help message
(help null).as_string + "   Extra..." = ``,

